tests/suite/errors/e17_negation_on_bool.rs
// err: negation on non-numeric

fn main() {
    let x: bool = true;
    let y: i32 = -x;
}
